--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8" standalone="no"?>
 <resources>
+
     <string name="app_name">WiFiCamera</string>
     <string name="label_file_browser">File Browser</string>
     <string name="label_camera_control">Camera Control</string>
     <string name="label_network_configurations">Network Configurations</string>
     <string name="label_camera_settings">Camera Settings</string>
-    <string name="label_video_resolution">Video Resolution</string>
+    <string name="label_video_resolution">Definition</string>
     <string name="label_image_resolution">Image Resolution</string>
     <string name="label_motion_detection">Motion Detection</string>
+    <string name="label_record_voice">recorder voice</string>
     <string name="label_on">On</string>
     <string name="label_off">Off</string>
     <string name="label_flicker_frequency">Flicker Frequency</string>
@@ -24,10 +26,10 @@
     <string name="label_ip_camera_preview">Camera Preview</string>
     <string name="label_ip_camera_browser">Camera File Browser</string>
     <string name="label_local_album">Local Album</string>
-    <string name="label_wifi_ssid">WiFi SSID</string>
-    <string name="label_encryption_key">Encryption Key</string>
+    <string name="label_wifi_ssid">SSID:</string>
+    <string name="label_encryption_key">Key:</string>
     <string name="label_update">Update</string>
-    <string name="label_re_activate_network">Re-activate Network</string>
+    <string name="label_re_activate_network">Reset</string>
     <string name="label_find_camera">Find Camera</string>
     <string name="label_title">Title</string>
     <string name="label_time0">0:00</string>
@@ -62,22 +64,6 @@
     <string name="label_items">items</string>
     <string name="message_save_video">Video files will be stored in local storage under directory</string>
     <string name="message_start_recording">Start Video Recording</string>
-    <string name="label_language_TChinese">繁體中文</string>
-    <string name="label_language_SChinese">简体中文</string>
-    <string name="label_language_Russian">Русский</string>
-    <string name="label_language_Spanish">español</string>
-    <string name="label_language_Portuguese">português</string>
-    <string name="label_language_French">français</string>
-    <string name="label_language_Italian">italiano</string>
-    <string name="label_language_Germany">Deutsch</string>
-    <string name="label_language_Czech">čeština</string>
-    <string name="label_language_Japanese">日本語</string>
-    <string name="label_language_Korean">한국의</string>
-    <string name="label_language_Latvian">Latvijas</string>
-    <string name="label_language_Polish">polski</string>
-    <string name="label_language_Romanian">român</string>
-    <string name="label_language_Slovak">slovenský</string>
-    <string name="label_language_Ukrainian">Український</string>					 
     <string name="app_Version">APP Version</string>
     <string name="FW_Version">Firmware Version</string>
     <string name="label_delete_files">Delete Files</string>
@@ -89,7 +75,7 @@
     <string name="AWB_Fluorescent_D">Fluorescent (Daylight)</string>
     <string name="AWB_Incandescent">Incandescent</string>
     <string name="Delete_All_Images">Delete all images</string>
-    <string name="Delete_All_Videos">Delete all videos</string> 
+    <string name="Delete_All_Videos">Delete all videos</string>
     <string name="label_Off">Off</string>
     <string name="label_Low">Low</string>
     <string name="label_Middle">Middle</string>
@@ -101,6 +87,27 @@
     <string name="SyncDevice">Synchronized with the device</string>
     <string name="label_Close">Close</string>
     <string name="label_net_disconnected">Network disconnected</string>
-    
-    
+
+    <!-- end title -->
+    <string name="end_title_recordcard">Recorder SD　card</string>
+    <string name="end_title_localfile">Local File</string>
+    <string name="end_title_setting">Setting</string>
+    <string name="end_title_setting_wifi">WI-FI Setting</string>
+    <string name="end_title_setting_face">Face Setting</string>
+
+    <!-- definition -->
+    <string name="definition_high">UHQ</string>
+    <string name="definition_midle">HDV</string>
+    <string name="definition_low">FLU</string>
+
+    <!-- motify WIFI SSID -->
+    <string name="mod_wifi_ssid">Motify WIFI SSID</string>
+    <string name="mod_wifi_pw">Motify WIFI Passwd</string>
+    <string name="regist_ok">Sure</string>
+    <string name="regist_cancel">Cancel</string>
+    <string name="set_ssid_old">Old SSID</string>
+    <string name="set_ssid_new">New SSID</string>
+    <string name="set_passwd_old">Old ：</string>
+    <string name="set_passwd_new">New ：</string>
+
 </resources>
